# gams

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: build.yml  codecov.yml
benches/: redis_scan.rs  redis_set.rs  serialize.rs
doc/: example.md  redis-cli.md
doc/benchmark/: Atha.md  backends.md  dragonfly.md  locate.md  redisearch.md  textql.md
results/: Atha.md  Scer.md  example.md
src/: gams-sql.rs  gams-stat.rs  gams.rs  garr.rs  gars-sql.rs  gars-stat.rs  gars.rs  lib.rs
src/cmd/: conf.rs  env.rs  gen.rs  mod.rs  pos.rs  range.rs  rsw.rs  sliding.rs  stat.rs  status.rs  tsv.rs  wave.rs
src/cmd_gams/: anno.rs  clear.rs  env.rs  feature.rs  fsw.rs  gen.rs  locate.rs  mod.rs  peak.rs  range.rs  rg.rs  sliding.rs  status.rs  sw.rs  swstat.rs  tsv.rs  wave.rs
src/cmd_gars/: anno.rs  clear.rs  env.rs  feature.rs  fsw.rs  gen.rs  locate.rs  mod.rs  peak.rs  pos.rs  range.rs  rsw.rs  sliding.rs  stat.rs  status.rs  tsv.rs  wave.rs
src/libs/: data.rs  delta_g.rs  mod.rs  redis.rs  stat.rs  utils.rs  window.rs
templates/: ctg-1.sql  ctg-2.sql  garr.tera.conf  gars.tera.env  peak.tera.R  plot_xy.tera.R
templates/ddl/: ctg.tera.sql  fsw.tera.sql  rsw.tera.sql
templates/dql/: fsw-distance-tag.tera.sql  fsw-distance.tera.sql  rsw-distance-tag.tera.sql  rsw-distance.tera.sql  summary-type.tera.sql  summary.tera.sql
tests/: cli.rs  gen.rs  pos.rs  range.rs  test.rs  wave.rs
tests/S288c/: I.peaks.tsv  SK1.snp.rg  chr.sizes  ctg.range.tsv  ctg.tsv  spo11_hot.rg
