[package]
name = "gams"
version = "0.3.1"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2018"
description = "Genome Analyst with Rust and rediS"
documentation = "https://github.com/wang-q/gams"
readme = "README.md"
homepage = "https://github.com/wang-q/gams"
repository = "https://github.com/wang-q/gams"
license = "MIT"
categories = ["command-line-utilities", "science"]
publish = false

[dependencies]
clap = { version = "4.5.3", features = ["cargo"] }
anyhow = "1.0.81"
regex = "1.10.3"
lazy_static = "1.4.0"
flate2 = "1.0.28"
tera = "1.19.1"
itertools = "0.12.1"

redis = { version = "0.25.2", default-features = false, features = ["script"] }
rand = "0.8.5"
serde = "1.0.197"
envy = "0.4.2"
dotenv = "0.15.0"
crossbeam = "0.8.4"

intspan = "0.7.5"
bio = "1.5.0"

# serialize
rust-lapper = { version = "1.0.1", features = ["with_serde"] }
bincode = "1.3.3"

polars = { version = "0.38.3", optional = true, features = ["dtype-slim", "lazy"] }

datafusion = { version = "36.0.0", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["rt"] }

[features]
stat = ["polars", "datafusion", "tokio"]

[[bin]]
name = "gams"
path = "src/gams.rs"

[[bin]]
name = "gams-stat"
path = "src/gams-stat.rs"
required-features = ["stat"]

[[bin]]
name = "gams-sql"
path = "src/gams-sql.rs"
required-features = ["stat"]

[build-dependencies]

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
approx = "0.5.1"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "redis_set"
harness = false

[[bench]]
name = "redis_scan"
harness = false

[profile.release]
lto = true
