[package]
name = "gams"
version = "0.3.1"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2018"
description = "Genome Analyst with in-Memory Storage"
documentation = "https://github.com/wang-q/gams"
readme = "README.md"
homepage = "https://github.com/wang-q/gams"
repository = "https://github.com/wang-q/gams"
license = "MIT"
categories = ["command-line-utilities", "science"]
publish = false

[dependencies]
clap = { version = "4.5.9", features = ["cargo"] }
anyhow = "1.0.86"
regex = "1.10.5"
lazy_static = "1.5.0"
flate2 = "1.0.30"
tera = "1.20.0"
itertools = "0.13.0"

redis = { version = "0.25.4", default-features = false, features = ["script"] }
rand = "0.8.5"
envy = "0.4.2"
dotenvy = "0.15.7"
crossbeam = "0.8.4"
csv = "1.2.2"

intspan = "0.7.7"
bio = "1.5.0"

# serialize
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
rust-lapper = { version = "1.1.0", features = ["with_serde"] }
serde_json = "1.0.120"

polars = { version = "0.41.3", optional = true, features = ["dtype-slim", "lazy", "sql"] }

[features]
stat = ["polars"]

[[bin]]
name = "gams"
path = "src/gams.rs"

[[bin]]
name = "gams-stat"
path = "src/gams-stat.rs"
required-features = ["stat"]

[build-dependencies]

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "redis_set"
harness = false

[[bench]]
name = "redis_scan"
harness = false

[profile.release]
lto = true
